add filter for group contract